--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Lucia Jayne
+title: Recsys
 email: lucia.jayne@colorado.edu
 description:
 baseurl: "/obp-librec-main" # the subpath of your site, e.g. /blog
